--- a/currency-converter-react-app/src/App.css
+++ b/currency-converter-react-app/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background: linear-gradient(to right bottom, #007673, #0e0066);
+  font-family: arial;
+  margin:0;
+  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.number {
+  padding: 10px; 
+  font-size: 20px; 
+  border: 1px solid black;
+  border-radius: 4px;
+  box-sizing: border-box;
+  width: 200px; 
+  margin: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.currency {
+  padding: 10px; 
+  font-size: 20px; 
+  border: 1px solid black;
+  border-radius: 4px;
+  box-sizing: border-box;
+  width: 100px; 
+  margin:15px;
+}
+
+.equal {
+  font-size: 30px; 
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  color:white;
+}
+
+h2{
+  color:white;
+  text-align: center;
 }
